--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
       <th>Games</th>
     </tr>
     <tr>
-      <td>Postive Impact Forestry:<br> A Sustainable Approach to<br> Managing Woodlands<br><br></td>
-      <td>Axe Giant: The Wrath of Paul Bunyan (2013)</td>
+      <td>Postive Impact Forestry:<br> A Sustainable Approach <br>to Managing Woodlands<br><br></td>
+      <td>Axe Giant: The Wrath of <br> Paul Bunyan (2013)</td>
       <td>Golden Axe</td>
     </tr>
     <tr>
-      <td>American Canopy: Trees, <br>Forests and the Making of a Nation<br><br></td>
+      <td>American Canopy: Trees, <br>Forests and the Making <br>of a Nation<br><br></td>
       <td>Big Timber (2003)</td>
       <td>Through the woods</td>
     </tr>
     <tr>
-      <td>Dirr's Trees and Shrubs<br> - an Illustrated Encyclopedia<br><br></td>
+      <td>Dirr's Trees and Shrubs<br> - an Illustrated <br> Encyclopedia<br><br></td>
       <td>Lumberjack (1944)</td>
       <td>Farm simulator: 2018</td>
     </tr>
