--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Latitude</a>
+    <a class="navbar-brand" href="index.html">Latitude</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     
@@ -26,10 +26,10 @@
             Plots
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Max Temperature</a>
-            <a class="dropdown-item" href="#">Humidity</a>
-            <a class="dropdown-item" href="#">Cloudiness</a>
-            <a class="dropdown-item" href="#">Wind Speed</a>
+            <a class="dropdown-item" href="max_temp.html">Max Temperature</a>
+            <a class="dropdown-item" href="humid.html">Humidity</a>
+            <a class="dropdown-item" href="cloud.html">Cloudiness</a>
+            <a class="dropdown-item" href="wind.html">Wind Speed</a>
             <div class="dropdown-divider"></div>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
@@ -37,14 +37,16 @@
         </li>
         <!-- Remaining items in list-->
         <li class="nav-item active">
-          <a class="nav-link" href="#">Comparison<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="Comp.html">Comparison<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Data</a>
+          <a class="nav-link" href="Data.html">Data</a>
         </li>
       </ul>
       
   </nav> 
+
+  
  <h1>Summary: Latitude vs. X</h1>
   <div>
     <figure class="box-set "><img src= "figures\1_Temperature in World Cities based on Latitude.png"  alt="Landing page"></figure>
