fix plot pages maybe

--- a/wind.html
+++ b/wind.html
@@ -50,14 +50,26 @@
   </nav>
 <!--NAVIGATION BAR Begin--> 
   
+<div class="container">
+  <h1>Wind</h1>
 
- <h1>Wind</h1>
-  <div>
-    <figure class="box-set "><img src= "figures\3_Wind Speed  in World Cities based on Latitude.png"  alt="wind"></figure>
-    <figure class="box-set "><img src="figures\z_02_4a_windspeed_Latitutde_Northern Hemisphere.png" alt="cloud"></figure>
-    <figure class="box-set "><img src="figures\z_02_4b_WindSPeed_Latitutde_Southern_Hemisphere.png" alt="cloud"></figure>
+  <div class="row">
+  <!--First Column in this Row-->
+      <div class="col-md-4">    
+          <figure class="box-set "><img src= "figures\3_Wind Speed  in World Cities based on Latitude.png"  alt="wind"></figure>
+      </div>
+
+
+      <div class="col-md-4">     
+          <figure class="box-set "><img src="figures\z_02_4a_windspeed_Latitutde_Northern Hemisphere.png" alt="cloud"></figure> 
+      </div>
+
+  <div class="col-md-4">
+          <figure class="box-set "><img src="figures\z_02_4b_WindSPeed_Latitutde_Southern_Hemisphere.png" alt="cloud"></figure>
   </div>
-  </div>
+
+
+
   <u><b><i><p><h4><b>Analaysis</b></h4></p></i></b></u> 
   <p>Wind speed is difficult to corelate to Latitude in this study. There is a lack of data as latitude reaches colder temperatures. This has more to do with how the study was conducted then any real
     trend.</p>
