--- a/cloud.html
+++ b/cloud.html
@@ -54,20 +54,36 @@
   </nav>
   <!--NAVIGATION BAR Begin-->
 
-
-  <h1>Cloud Cover</h1>
-  <div>
-    <figure class="box-set "><img src="figures\4_Cloud_cover_Latitude.png" alt="cloud"></figure>
-    <figure class="box-set "><img src="figures\z_02_3a_Cloud_Northern_Hemisphere.png" alt="cloud"></figure>
-    <figure class="box-set "><img src="figures\z_02_3b_Cloudiness_Southern Hemisphere.png" alt="cloud"></figure>
-  </div>
+  <div class="container">
+    <h1>Cloud Cover</h1></div>
 
 
+    <div class="row">
+    <!--First Column in this Row-->
+        <div class="col-md-4">    
+            <figure class="box-set "><img src= "figures\4_Cloud_cover_Latitude.png" alt="cloud"></figure>
+        </div>
 
 
-          </div>
+        <div class="col-md-4">     
+            <figure class="box-set "><img src="figures\z_02_3a_Cloud_Northern_Hemisphere.png" alt="cloud"></figure>  
+        </div>
 
-  </div>
+    <div class="col-md-4">
+            <figure class="box-set "><img src="figures\z_02_3b_Cloudiness_Southern Hemisphere.png" alt="cloud"></figure>
+    </div>
+
+
+</div>
+
+
+
+
+
+
+        
+
+
 
 
       </div>
@@ -76,11 +92,7 @@
             </i></b></u>
                   <p>Cloud cover is difficult to corelate to Latitude in this study. There is a lack of data as latitude reaches colder temperatures. This has more to do with how the study was conducted then any real
                     trend.</p>
-                      
-
-
-
-      </div>
+        </div>
 
 
 
