--- a/humid.html
+++ b/humid.html
@@ -51,16 +51,35 @@
 <!--NAVIGATION BAR Begin--> 
 
 
-<div><h1>Humidity</h1></div>
-<div></div>  
-<div>
-  <figure class="box-set "><img src= "figures\2_humid.png"  alt="Humidity"></figure>
-  <figure class="box-set "><img src="figures\z_02_2a_Humidity_vrs_Latitude_Northern Hemisphere.png" alt="cloud"></figure>
-  <figure class="box-set "><img src="figures\z_02_2b_Humidity_vrs_Latitude_So_Hemisphere.png" alt="cloud"></figure>
-</div> 
-<u><b><i><p><h4><b>Analaysis</b></h4></p></i></b></u> 
-  <p>Global humidity data would appear to support it is warmer at the equator (Graph: Humidity of the world Cities bassed on Latitude). This is perhaps on of the more striking graphs in the collection. There is a clear uptrend in humidity towards the equator. Comparing the Northern hemisphere to the Southern hemisphere is interesting to see the contrast. Looking at a bigger sample size may be interesting.</p>
-</div>
+    <div class="container">
+        <h1>Humidity</h1></div>
+
+
+        <div class="row">
+        <!--First Column in this Row-->
+            <div class="col-md-4">    
+                <figure class="box-set "><img src= "figures\2_humid.png"  alt="Humidity"></figure>
+            </div>
+
+
+            <div class="col-md-4">     
+                <figure class="box-set "><img src="figures\z_02_2a_Humidity_vrs_Latitude_Northern Hemisphere.png" alt="cloud"></figure>    
+            </div>
+
+        <div class="col-md-4">
+                <figure class="box-set "><img src="figures\z_02_2b_Humidity_vrs_Latitude_So_Hemisphere.png" alt="cloud"></figure>
+        </div>
+
+    
+    </div>
+
+        <div>
+          <u></u><b><i><p><h2><b>Analaysis</b></h2></p></i></b></u> 
+          <p>Global humidity data would appear to support it is warmer at the equator (Graph: Humidity of the world Cities bassed on Latitude). This is perhaps on of the more striking graphs in the collection. There is a clear uptrend in humidity towards the equator. Comparing the Northern hemisphere to the Southern hemisphere is interesting to see the contrast. Looking at a bigger sample size may be interesting.</p>
+        </div>
+
+
+      
 
 
 
