--- a/max_temp.html
+++ b/max_temp.html
@@ -50,15 +50,32 @@
   </nav>
 <!--NAVIGATION BAR END--> 
 
+
+    <div class="container">
+    <h1>Temprature</h1></div>
+        <div class="row">
+          <!--First Column in this Row-->
+              <div class="col-md-4">    
+                <figure class="box-set "><img src= "figures\1_Temperature in World Cities based on Latitude.png" alt="Humidity"></figure>
+              </div>
+
+
+              <div class="col-md-4">     
+                <figure class="box-set "><img src="figures\z_02_1a_Tempratue_vrs_Latitutde_Nor.png" alt="cloud"></figure>    
+              </div>
+
+              <div class="col-md-4">
+                <figure class="box-set "><img src="figures\z_02_1b_Tempratue_vrs_Latitutde_Southern.png" alt="cloud"></figure>
+              </div>
+
+        </div
   
- <div></div><h1>Max Temperature</h1></div>
-  <div>
-    <figure class="box-set "><img src= "figures\1_Temperature in World Cities based on Latitude.png"  alt="Paul Bunyan"></figure>
-    <figure class="box-set "><img src="figures\z_02_1a_Tempratue_vrs_Latitutde_Nor.png" alt="cloud"></figure>
-    <figure class="box-set "><img src="figures\z_02_1b_Tempratue_vrs_Latitutde_Southern.png" alt="cloud"></figure>
+    </div>
+  
+  
       <u><b><i><p><h4><b>Analaysis</b></h4></p></i></b></u> 
       <p>Temperature to latitude data was as expected. Temperatures near the equator trend higher than other regions (Graph: Temperatures in world Cities based on Latitude). A second graph was constructed to overlay data from both hemispheres to contrast trends (Graph: Temperature in World Cities base on Latitude). Linear regression analysis shows a similar comparison between temperatures for both hemispheres. the slopes for both Northern hemisphere and Southern hemisphere were similar (North -0.83: South -0.67). R2 values correlation imply a medium correlation to the data plotted (North 0.68: South 0.46).</p>
-  </div>
+
   
 
 
