--- a/wind.html
+++ b/wind.html
@@ -48,38 +48,56 @@
       </ul>
    
   </nav>
-<!--NAVIGATION BAR Begin--> 
+  <!--NAVIGATION BAR end--> 
   
-<div class="container">
-  <h1>Wind</h1>
 
-  <div class="row">
-  <!--First Column in this Row-->
-      <div class="col-md-4">    
-          <figure class="box-set "><img src= "figures\3_Wind Speed  in World Cities based on Latitude.png"  alt="wind"></figure>
-      </div>
-
-
-      <div class="col-md-4">     
-          <figure class="box-set "><img src="figures\z_02_4a_windspeed_Latitutde_Northern Hemisphere.png" alt="cloud"></figure> 
-      </div>
-
-  <div class="col-md-4">
-          <figure class="box-set "><img src="figures\z_02_4b_WindSPeed_Latitutde_Southern_Hemisphere.png" alt="cloud"></figure>
-  </div>
+    <!-- Creates the Overall Grid -->
+    <div class="container"></div>
+      
+        <!-- First (and only column) -->
+        <div class="row"></div> 
+          
+          <div class="col-md-12 justify-content-end">
+            <h1>Wind Speed</h1>
+          </div>
+        </div> 
 
 
+        <!-- Second Row  GRAPHS-->
+        <div class="row">
+          <!--First Column in this Row-->
+          <div class="col-md-3">    
+            <figure class="box-set "><img src= "figures\3_Wind Speed  in World Cities based on Latitude.png"  alt="wind"></figure>
+            <h3 class="text-center">Figure D-1</h3>
+          </div>
 
-  <u><b><i><p><h4><b>Analaysis</b></h4></p></i></b></u> 
-  <p>Wind speed is difficult to corelate to Latitude in this study. There is a lack of data as latitude reaches colder temperatures. This has more to do with how the study was conducted then any real
-    trend.</p>
-  </div>
+          <div class="col-md-3">     
+            <figure class="box-set "><img src="figures\z_02_4a_windspeed_Latitutde_Northern Hemisphere.png" alt="cloud"></figure> 
+            <h3 class="text-center">Figure D-2</h3>
+          </div>
+
+          <div class="col-md-3">
+            <figure class="box-set "><img src="figures\z_02_4b_WindSPeed_Latitutde_Southern_Hemisphere.png" alt="cloud"></figure>
+            <h3 class="text-center">Figure D-3</h3>
+          </div>
+        </div>
+
+       <!-- Third Row -->
+       <div class="row">
+          <h2><br>Analaysis</h2>
+          <p class="text-left">Wind speed is difficult to corelate to Latitude in this study. There is a lack of data as latitude reaches colder temperatures. This has more to do with how the 
+            study was conducted then any real trend.</p>
+        </div>
 
 
+    </div>
 
+
+  <!--Needed for Bootstrap Begin--> 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!--Needed for Bootstrap end-->
 </body>
 
 </html>
