update to all data packages

--- a/Comp.html
+++ b/Comp.html
@@ -49,11 +49,44 @@
   </nav>
 <!--NAVIGATION BAR Begin--> 
 
+    <!-- Creates the Overall Grid -->
+    <div class="container"></div>  
+              
+          <!-- First (and only column) -->
+          <div class="row"></div>
+            <div class="container"></div>
+              <h1>Comparison</h1>
+            </div>
+          </div>
+          <!-- GRAPHS-->
+          <div class="row">
+            <!--First Row-->
+            <div class="col-md-12">     
+              <h2></h2>
+            </div>
+            <div class="col-md-4">    
+              <figure class="box-set"><img src="figures\1com_Temp.png" alt="temp"></figure>    
+              <h2 class="text-center">Temprature Fahrenheight  (fig.A)</h2>
+            </div>
+            <div class="col-md-4">    
+              <figure class="box-set "><img src="figures\1com_humid.png"  alt="Huidity"></figure>    
+              <h2 class="text-center">Humidity RH%(fig.B)</h2>
+            </div>
+            
+            <!--Second Row-->
+            <div class="col-md-12">     
+              <h2></h2>
+            </div>
+            <div class="col-md-4">    
+              <figure class="box-set"><img src="figures\1com_cloud.png" alt="Cloud"></figure>    
+              <h2 class="text-center">Cloud Cover% (fig.C)</h2>
+            </div>
+            <div class="col-md-4">    
+              <figure class="box-set "><img src="figures\1com_wind.png"  alt="wind"></figure>    
+              <h2 class="text-center">Wind Speed mph (fig. D)</h2>
+            </div>
 
- <h1>Comparison </h1>
-  <div>
-    <figure class="box-set "><img src= "figures\bheadshot.png"  alt="Data Page"></figure>
-  </div>
+    </div>
 
 
 
