--- a/indexab.html
+++ b/indexab.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <!--NAVIGATION BAR Begin-->
+<!--NAVIGATION BAR Begin-->
   <nav class="navbar navbar-expand-lg navbar-dark p-3 mb-2 bg-primary">
     <a class= "navbar-brand" href="index.html" >Latitude</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,20 +47,20 @@
       </ul>
    
   </nav>
-  <!--NAVIGATION BAR Begin--> 
+<!--NAVIGATION BAR Begin--> 
 
 
   
 
 
 <!--The THUMBNAIL:-->
-  <div class="container"></div>
+    <div class="container">
         <div class="row"></div>
             <div class="col-md-12">
                 <h3 class="text-center"><h1 class="display-4">Summary: Latitude vs. X</h1></h3>
             </div>
             <div class="row">
-                <div class="col-md-4" >
+                <div class="col-md-5" >
                     <div class="thumbnail">
                     <img src="figures\1_Temperature in World Cities based on Latitude.png" alt="..." class="img-thumbnail">
                     </div>
@@ -69,7 +69,7 @@
             
                 <!--The THUMBNAIL: Used two thumbnails temperary solution-->
 
-                </div class="pull-right img-responsive">
+                </div class="pull-right img-responsive">>
                 <div class="col-md-2">
                     <h4 class="display-12" class="text-right">.</h4>
                     <div class="thumbnail">
@@ -92,10 +92,10 @@
                     </div>
                 </div>
 
-  </div>
-    <div class="container"></div>
-        <div class="caption"></div>
-            <h2>Latitude Vs City Temprature</h2>
+    </div>
+    <div class="container">
+        <div class="caption">
+        <h3>Latitude Vs City Temprature</h3>
                     <p> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et netus et malesuada fames ac turpis egestas. Congue eu consequat ac felis donec. Eget est lorem ipsum dolor sit amet consectetur adipiscing. Molestie nunc non blandit massa. Tristique senectus et netus et malesuada. Leo integer malesuada nunc vel risus commodo viverra maecenas accumsan. </p></p>
                     <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Buttons</a></p>
     </div>
