finishing up conclusions

--- a/cloud.html
+++ b/cloud.html
@@ -92,8 +92,7 @@
         <!-- Third Row -->
         <div class="row">
           <h2><br>Analaysis</h2>
-            <p class="text-left">Cloud cover is difficult to corelate to Latitude in this study. There is a lack of data as latitude reaches colder temperatures. This has more to do with how the study was conducted then any real
-              trend.</p>
+            <p class="text-left">The linear regressions values for this study would imply no correlation between latitude and the percentage of cloud cover. No relationship exists</p>
         </div>
 
 
