--- a/humid.html
+++ b/humid.html
@@ -81,8 +81,8 @@
           <!-- Third Row -->
           <div class="row">
             <h2><br>Analaysis</h2>
-              <p class="text-left">Global humidity data would appear to support it is warmer at the equator (Graph: Humidity of the world Cities bassed on Latitude). This is perhaps on of the more striking graphs in the collection. There is a clear uptrend in humidity towards the equator. Comparing the Northern hemisphere to the Southern hemisphere is interesting to see the contrast. Looking at a bigger 
-                sample size may be interesting.</p>
+              <p class="text-left">A plot of latitude vs. humidity was obtained from the data set (figure B-1). The data was divided into northern (figure B-2) and southern hemispheres (figure B-3) to obtain linear regression values. Plots for the northern hemisphere had a r^2 value of 0.0451 indicating no correlation between latitude and humidity. The positive slope indicates humidity increases with increasing latitude which would not be consistent with the trend.  Southern hemisphere had linear regression value of 0.1395 r^2 demonstrating a very week correlation or no correlation. The slope of the line is negative which would be consistent with the trend of humidity decreasing in cooler climates. </p>
+              <p>This data does not decisively demonstrate a correlation between an increase of humidity to an decrease of latitude. </p>
           </div>
   
     </div>
