--- a/max_temp.html
+++ b/max_temp.html
@@ -88,8 +88,9 @@
         <!-- Third Row -->
         <div class="row">
               <h2><br>Analaysis</h2>
-                <p class="text-left">Temperature to latitude data was as expected. Temperatures near the equator trend higher than other regions (Graph: Temperatures in world Cities based on Latitude). A second graph was constructed to overlay data from both hemispheres to contrast trends (Graph: Temperature in World Cities base on Latitude). Linear regression analysis shows a similar comparison between temperatures for both hemispheres. the slopes for both Northern hemisphere and Southern hemisphere were similar (North -0.83: South -0.67). R2 values correlation imply a medium correlation to the data plotted (North 0.68: South 0.46).</p>
-        </div>
+                <p>A plot of latitude vs temperature was obtained from the data set (figure A-1). The data was divided into northern (figure A-2) and southern hemispheres (figure A-3) to obtain linear regression values. Plots for the northern hemisphere had a r^2 value of 0.77 indicating a strong correlation between latitude and temperature. The negative slope also indicated temperatures decrease with increasing latitude which would be consistent with the trend.  Temperatures in the southern hemisphere had linear regression value of 0.18 r^2 demonstrating a week correlation. The slope of the line is also negative which would be consistent with the trend. </p>
+                <p>This data would suggest a correlation exists between an increase of temperature to an decrease of latitude. </p> 
+              </div>
       
     </div>
     <div class="spacerbig"></div>
