--- a/wind.html
+++ b/wind.html
@@ -81,16 +81,12 @@
             <h3 class="text-center">Figure D-3</h3>
           </div>
         </div>
+        
+        <h2><br>Analaysis</h2>
+        <p class="text-left">The linear regressions values for this study would imply no correlation between latitude and windspeed.</p>
+      
 
-       <!-- Third Row -->
-       <div class="row">
-          <h2><br>Analaysis</h2>
-          <p class="text-left">Wind speed is difficult to corelate to Latitude in this study. There is a lack of data as latitude reaches colder temperatures. This has more to do with how the 
-            study was conducted then any real trend.</p>
-        </div>
-
-
-    </div>
+  
 
   <div class="spacerbig"></div>
     <!--Needed for Bootstrap Begin--> 
@@ -100,6 +96,7 @@
     <!--Needed for Bootstrap end-->
 
 </body>
+<div class="spacerbig"></div>
 </section>
 </html>
   
