--- a/Comp.html
+++ b/Comp.html
@@ -32,9 +32,7 @@
             <a class="dropdown-item" href="humid.html">Humidity</a>
             <a class="dropdown-item" href="cloud.html">Cloudiness</a>
             <a class="dropdown-item" href="wind.html">Wind Speed</a>
-            <div class="dropdown-divider"></div>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+
           </div>
         </li>
         <!-- Remaining items in list-->
@@ -89,8 +87,8 @@
     </div>
             <!-- Third Row -->
             <div class="row">
-              <h2><br>Analaysis</h2>
-                <p class="text-left">Temperature vs. latitude data was as expected. Temperatures near the equator trend higher than regions with higher latitude values. A second graph (fig.A ) was constructed to overlay data from both hemispheres to contrast trends. Linear regression analysis shows a similar comparison between temperatures for both hemispheres. the slopes for both northern hemisphere and southern hemisphere were similar (North -0.91: South -0.33). 
+              <h2><br>Final Analaysis</h2>
+                <p class="text-left">Temperatures near the equator trend higher than regions closer to the earth's poles. A second graph (fig.A ) was constructed to overlay data from both hemispheres to compare trends. Linear regression analysis depicts a similar correlation between temperatures for both hemispheres. The slopes for both hemispheres was negative (North -0.91: South -0.33) as expected. 
                   R^2 values imply a medium correlation to the data plotted (North 0.77: South 0.18).
                 </p>
                 <p>Humidity, cloud cover, and wind speed would suggest that a correlation does not exist with latitude bassed on linear regression values . Humidity in the southern hemisphere does show weak correlation and has negative slope which would be consistent 
